navbar: fix itemdisplay on mobile

--- a/src/components/landing/landing.module.css
+++ b/src/components/landing/landing.module.css
@@ -12,7 +12,7 @@
 }
 
 .center{
-    padding: 100px 0;
+    padding: 50px 0;
     display: flex;
     flex-direction: row;
     align-items: center;
