--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -270,6 +270,7 @@
       box-shadow: none;
       margin-top: 15px;
       border-radius: 0px;
+      width: 100%;
       padding:0px;
       overflow: hidden;
       list-style-type: none;
